horizontal overflow fix

--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@ body{
   background: linear-gradient(to right, #1b2530, #8E0E00);
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
+
 *:focus{
   color: orange;
 }
+
 .container{
   background:crimson; 
   height: 300px;
